# win-toast-notifier

./: Cargo.toml  LICENSE  README.md  toast.xml
.github/workflows/: rust.yml
doc/: example-toast.xml
src/: elevator.rs  elevator_values.rs  event_log.rs  main.rs  notifier.rs  registerer.rs  ring_buffer.rs  utils.rs
