[package]
name = "win-toast-notifier"
version = "1.1.1"
edition = "2021"
authors = [
    "Vadym Artemchuk"
]
description = "Provides HTTP API to windows toast notifications interop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scopeguard = "1.1.0"
thiserror = "1.0.44"
url = "2.2.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
atoi = "2.0.0"
lazy_static = "1.4.0"
clap = { version = "4.3.21", features = ["derive"] }
mslnk = "0.1.8"
dirs-next = "2.0.0"
sanitize-filename = "0.5.0"
winreg = "0.50.0"
named_pipe = "0.4.1"
widestring = "1.0.2"
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.windows]
version = "0.51.1"
features = [
    "Data_Xml_Dom",
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "UI_Notifications",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging"
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[profile.release]
strip = true
opt-level = "z"
lto = true